<resources>
    <string name="app_name">Swiat Zwierzat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button_login_with_fingerprint">Use fingerprint</string>
    <string name="register">Registration</string>
    <string name="forget">Recovery</string>
    <string name="preference_file_key">file_key</string>
    <string name="confirmedPassword">Confirmed Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="back">Back</string>
    <string name="registered">Please check your email!</string>
    <string name="address_created">Address has been created!</string>
    <string name="address_updated">Address has been updated!</string>
    <string name="provide_address">Please provide your address for placing orders!</string>
    <string name="credentials_login_error">Credentials seems wrong! Please try again.</string>
    <string name="credentials_login">Correctly logged in!</string>
    <string name="register_firstname_error_empty">Firstname is missing!</string>
    <string name="register_firstname_error_min_length">Firstname is too short!</string>
    <string name="register_lastname_error_empty">Lastname is missing!</string>
    <string name="register_lastname_error_min_length">Lastname is too short!</string>
    <string name="register_email_error_empty">Email is missing!</string>
    <string name="register_email_wrong_type">Email is wrong!</string>
    <string name="register_password_wrong_min_length">Password it too short. Minimum 8 characters!</string>
    <string name="register_password_not_equal">Passwords are not the same!</string>
    <string name="register_phone_empty">Mobile phone needs to have minimum 9 digits!</string>
    <string name="register_street_empty">Street can not be empty!</string>
    <string name="register_city_empty">City can not be empty!</string>
    <string name="order_is_placed">Order has been placed! To finalize check our website!</string>
    <string name="register_postal_code_empty">Postal code can not be empty!</string>
    <string name="register_postal_code_wrong_format">Postal code wrong format! Example: ##-###</string>
    <string name="global_something_went_wrong">Something went wrong! Please try again later!</string>
    <string name="forget_success">Please check email!</string>
    <string name="send">Send</string>
    <string name="plus">Plus</string>
    <string name="delete">Delete</string>
    <string name="minus">Minus</string>

    <string name="fingerprint_login_title">Authorization</string>
    <string name="fingerprint_login_description">Login with biometrics to last signed account or cancel to change credentials</string>
    <string name="fingerprint_cancel">Cancel</string>

    <string name="notification_refresh_token_error">Couldn\'t refresh token, please use credentials to login</string>
    <string name="notification_reminder_title">Buy something!</string>
    <string name="notification_reminder_message">Remember to spend your money in our shop. Don\'t disappoint your pet!</string>
    <string name="notification_cart_item_added_title">Cart</string>
    <string name="notification_cart_item_added_message">The product has been added to your cart</string>
    <string name="notification_error_unknown">Something went wrong! Please try again later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="product_name">Name</string>
    <string name="description">Description</string>
    <string name="productTag">Product Tag</string>
    <string name="available">Available</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="Mobile">Mobile Phone\n</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cart">Cart</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="darkmode">Dark mode</string>
    <string name="store_location">Store Location</string>
</resources>